@@ -10,6 +10,7 @@ prereqs_skip = Moo
 prereqs_skip = Moose
 prereqs_skip = Mouse
 prereqs_skip = namespace::autoclean
+prereqs_skip = Sub::Name
 stopwords_file = .stopwords
 use_github_issues = 1
 -remove = Test::CleanNamespaces
@@ -18,6 +19,7 @@ use_github_issues = 1
 
 [Prereqs::Soften]
 module = Ref::Util
+module = Sub::Util
 
 [Prereqs / DevelopRequires]
 Moo = 0
